bugfix container bg, some box alignment, video medium cute

--- a/metastable/styles/style.css
+++ b/metastable/styles/style.css
@@ -18,18 +18,19 @@ h1 {
   grid-template-rows: repeat(2, [row] auto ) ;
   color: #444;
   opacity: .8;
+  grid-gap: 5px, 5px;
 }
 
 .box {
   background-color: #444;
   color: #fff;
   border-radius: 5px;
-  border: #ccc;
+  border-style: solid;
   padding: 100px;
   font-size: 150%;
   overflow: hidden;
   align-content: center;
-  grid-gap: 10px, 10px;
+  grid-gap: 5px, 5px;
 }
 
 .a {
@@ -53,7 +54,9 @@ h1 {
 .c {
   grid-column: col 4 / span 3;
   grid-row: row 2 / span 4;
-  align-content: flex-end;
+  height: auto;
+  width: auto;
+  align-content: baseline;
   object-fit: cover; 
 }
 
@@ -68,7 +71,7 @@ h1 {
 
 .e {
   grid-column: col 1 / span 8;
-  grid-row: row 5;
+  grid-row: row 5 / span 1;
   display: flex;
   align-items: center;
   justify-content: center;
